# IoT-Communication-System

./: README.md
IoT_Server/: CMakeLists.txt  Channel.h  ServerChannel.cpp  ServerChannel.h  Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
client/: Makefile
client/include/: ClientChannel.h
client/src/: ClientChannel.cpp  TCPSocket.cpp  UDPSocket.cpp
meta-iotclient/: README
meta-iotclient/conf/: layer.conf
meta-iotclient/recipes-client/iotclient/: iotclient_1.0.bb
meta-iotclient/recipes-client/iotclient/files/: Makefile
meta-iotclient/recipes-client/iotclient/files/include/: Channel.h  Socket.h  TCPSocket.h  UDPSocket.h
meta-iotclient/recipes-client/iotclient/files/src/: main.cpp
